objects/Quick_Text__c.object
<CustomObject>
    <fields>
        <fullName>Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>Quick Texts</relationshipLabel>
        <relationshipName>Quick_Texts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Language</label>
        <referenceTo>Language__c</referenceTo>
        <relationshipLabel>Quick Texts</relationshipLabel>
        <relationshipName>Quick_Texts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quick_Text_Category__c</fullName>
        <label>Quick Text Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                    <default>true</default>
                    <label>Email</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quick_Text_Message__c</fullName>
        <label>Quick Text Message</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Quick Text</label>
    <nameField>
        <label>Quick Text Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quick Texts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>